--- a/src/common/styles/widgets.css
+++ b/src/common/styles/widgets.css
@@ -4,6 +4,7 @@
 @import '../../checkbox/styles/checkbox.m.css';
 @import '../../combobox/styles/comboBox.m.css';
 @import '../../dialog/styles/dialog.m.css';
+@import '../../basic-menu/styles/basicMenu.m.css';
 @import '../../radio/styles/radio.m.css';
 @import '../../select/styles/select.m.css';
 @import '../../slidepane/styles/slidePane.m.css';
