more work porting themes to widgets

--- a/src/range-slider/styles/range-slider.m.css
+++ b/src/range-slider/styles/range-slider.m.css
@@ -17,7 +17,9 @@
 
 /* Make native input invisible */
 .nativeInput {
-	appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance:    none;
+	appearance:         none;
 	background: transparent;
 	border: 0 none;
 	color: transparent;
@@ -35,7 +37,9 @@
 
 /* invisible native track */
 .nativeInput::-ms-track {
-	appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance:    none;
+	appearance:         none;
 	background: transparent;
 	border: 0 none;
 	color: transparent;
@@ -47,7 +51,9 @@
 }
 
 .nativeInput::-moz-range-track {
-	appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance:    none;
+	appearance:         none;
 	background: transparent;
 	border: 0 none;
 	color: transparent;
@@ -79,7 +85,9 @@
 }
 
 .nativeInput::-webkit-slider-thumb {
-	appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance:    none;
+	appearance:         none;
 	border-radius: 50%;
 	border: 0 none;
 	background: transparent;
