--- a/src/theme/dojo/select.m.css
+++ b/src/theme/dojo/select.m.css
@@ -24,7 +24,9 @@
 	position: relative;
 	text-align: left;
 	width: 100%;
-	appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance:    none;
+	appearance:         none;
 	border-radius: 0;
 }
 
@@ -80,7 +82,9 @@
 
 /* native input styles */
 .input {
-	appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance:    none;
+	appearance:         none;
 	background-color: var(--color-background);
 	border: var(--border-width) solid var(--color-border);
 	border-bottom-color: var(--color-border-strong);
