--- a/src/theme/dojo/listbox.m.css
+++ b/src/theme/dojo/listbox.m.css
@@ -42,6 +42,11 @@
 	position: relative;
 }
 
+.other {
+	composes: checkIcon from './icon.m.css';
+	background: red;
+}
+
 .selectedOption::before {
 	font-family: 'dojo2BaseTheme';
 	position: absolute;
